--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "zh-TW"
 title                    : "魔方學"
 title_separator          : "-"
 name                     : "worldmaker"
-description              : "The theory of twisty puzzles."
+description              : "關於魔術方塊的理論"
 url                      : "https://worldmaker18349276.github.io"
 baseurl                  : "/cubesics"
 repository               : "worldmaker18349276/cubesics"
@@ -18,9 +18,9 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  provider               : "disqus"
   disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : "cubesics"
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -241,6 +241,6 @@ defaults:
       layout: single
       author_profile: false
       read_time: false
-      comments: # true
+      comments: true
       share: true
       related: false
