--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   name             : "黃昱維"
   avatar           : "/assets/images/mycube.png"
   bio              : "a cuber"
-  location         : "台灣 (Taiwan)"
+  location         : "台灣"
   email            : "worldmaker18349276@gmail.com"
   uri              :
   bitbucket        :
