--- a/_config.yml
+++ b/_config.yml
@@ -239,7 +239,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       read_time: false
       comments: true
       share: true
