try to fix sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -237,7 +237,7 @@ compress_html:
 defaults:
   # _pages/theorem/
   - scope:
-      path: "_pages/theorem/"
+      path: "/_pages/theorem"
       type: pages
     values:
       layout: single
@@ -251,7 +251,7 @@ defaults:
 
   # _pages/mechanism/
   - scope:
-      path: "_pages/mechanism/"
+      path: "/_pages/mechanism/"
       type: pages
     values:
       layout: single
@@ -265,7 +265,7 @@ defaults:
 
   # _pages/museum/
   - scope:
-      path: "_pages/museum/"
+      path: "/_pages/museum/"
       type: pages
     values:
       layout: single
