--- a/_config.yml
+++ b/_config.yml
@@ -235,9 +235,21 @@ compress_html:
 
 # Defaults
 defaults:
+  # _pages/
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      read_time: false
+      comments: true
+      share: true
+      related: false
+
   # _pages/theorem/
   - scope:
-      path: "theorem"
+      path: "_pages/theorem/"
       type: pages
     values:
       layout: single
@@ -251,7 +263,7 @@ defaults:
 
   # _pages/mechanism/
   - scope:
-      path: "mechanism"
+      path: "_pages/mechanism/"
       type: pages
     values:
       layout: single
@@ -265,7 +277,7 @@ defaults:
 
   # _pages/museum/
   - scope:
-      path: "museum"
+      path: "_pages/museum/"
       type: pages
     values:
       layout: single
