--- a/_config.yml
+++ b/_config.yml
@@ -249,7 +249,7 @@ defaults:
 
   # _pages/theorem/
   - scope:
-      path: "_pages/theorem/"
+      path: "_pages/theorem"
       type: pages
     values:
       layout: single
@@ -263,7 +263,7 @@ defaults:
 
   # _pages/mechanism/
   - scope:
-      path: "_pages/mechanism/"
+      path: "_pages/mechanism"
       type: pages
     values:
       layout: single
@@ -277,7 +277,7 @@ defaults:
 
   # _pages/museum/
   - scope:
-      path: "_pages/museum/"
+      path: "_pages/museum"
       type: pages
     values:
       layout: single
