--- a/_config.yml
+++ b/_config.yml
@@ -108,10 +108,11 @@ author:
 
 
 # Reading Files
+collections:
+  - theorem
 include:
   - .htaccess
   - _pages
-  - _theorem
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
