--- a/_config.yml
+++ b/_config.yml
@@ -239,6 +239,7 @@ compress_html:
 # Defaults
 defaults:
   - scope:
+      path: "_pages"
       type: pages
     values:
       layout: single
@@ -249,6 +250,7 @@ defaults:
       related: false
 
   - scope:
+      path: "_theorem"
       type: theorem
     values:
       layout: single
