--- a/_config.yml
+++ b/_config.yml
@@ -260,9 +260,8 @@ defaults:
       share: true
       related: false
 
-  # _pages/mechanism/
   - scope:
-      path: "_pages/mechanism"
+      path: "_mechanism"
       type: pages
     values:
       layout: single
@@ -274,9 +273,8 @@ defaults:
       share: true
       related: false
 
-  # _pages/museum/
   - scope:
-      path: "_pages/museum"
+      path: "_museum"
       type: pages
     values:
       layout: single
