try to fix defaults
* Update _config.yml

* Rename _pages/museum/museum_en.md to _mechanism/museum_en.md

* Rename _pages/museum/museum_zh_TW.md to _museum/museum_zh_TW.md

* Rename _mechanism/museum_en.md to _museum/museum_en.md

* Rename _pages/mechanism/mechanism_en.md to _mechanism/mechanism_en.md

* Rename _pages/mechanism/mechanism_zh_TW.md to _mechanism/mechanism_zh_TW.md

* Update _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -112,6 +112,8 @@ include:
   - .htaccess
   - _pages
   - _theorem
+  - _mechanism
+  - _museum
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -260,9 +262,8 @@ defaults:
       share: true
       related: false
 
-  # _pages/mechanism/
   - scope:
-      path: "_pages/mechanism"
+      path: "_mechanism"
       type: pages
     values:
       layout: single
@@ -274,9 +275,8 @@ defaults:
       share: true
       related: false
 
-  # _pages/museum/
   - scope:
-      path: "_pages/museum"
+      path: "_museum"
       type: pages
     values:
       layout: single
