--- a/_config.yml
+++ b/_config.yml
@@ -250,7 +250,7 @@ defaults:
       related: false
 
   - scope:
-      path: "_theorem"
+      path: "_algorithm"
       type: pages
     values:
       layout: single
