--- a/_config.yml
+++ b/_config.yml
@@ -188,6 +188,7 @@ gems:
   - jekyll-feed
   - jemoji
   - jekyll-redirect-from
+  - jekyll-last-modified-at
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -197,6 +198,7 @@ whitelist:
   - jekyll-feed
   - jemoji
   - jekyll-redirect-from
+  - jekyll-last-modified-at
 
 
 # Archives
